--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "zendframework/zend-serializer": "^2.8",
         "zendframework/zend-permissions-rbac": "^2.5",
         "doctrine/data-fixtures": "^1.2",
-        "zendframework/zend-stdlib": "^3.1"
+        "zendframework/zend-stdlib": "^3.1",
+        "zendframework/zend-developer-tools": "^1.1"
     },
     "autoload": {
         "psr-4": {
